--- a/table.html
+++ b/table.html
@@ -6,66 +6,52 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color:darkslategray" align="center"> ABES Engineering college</h1>
-    <table border="1" align="center" style="background-color:antiquewhite ">
-        <tr style="background-color:rgb(0, 255, 238)">
-            <th>name</th>
-            <th>phone</th>
-            <th>address</th>
-            <th>email</th>
-            <th>rollno.</th>
-        </tr>
-        <tr style="background-color:rgb(127, 195, 255)">
-            <td>Sakshi chauhan</td>
-            <td>9876543435</td>
-            <td>Bijnor</td>
-            <td>sakshi@gmail.com</td>
-            <td>88</td>
-        </tr>
-        <tr style="background-color: aquamarine">
-            <td>akshi chauhan</td>
-            <td>9876643435</td>
-            <td>Bijnor</td>
-            <td>akshi@gmail.com</td>
-            <td>87</td>
-        </tr>
-        <tr style="background-color: bisque;">
-            <td>riti chauhan</td>
-            <td>9879543435</td>
-            <td>dhampur</td>
-            <td>riti@gmail.com</td>
-            <td>90</td>
-        </tr>
-        <tr style="background-color: cornsilk;">
-            <td>priya</td>
-            <td>9876943435</td>
-            <td>Bijnor</td>
-            <td>priya@gmail.com</td>
-            <td>93</td>
-        </tr>
-        <tr style="background-color: rgb(242, 127, 255);">
-            <td>Sakshi chauhan</td>
-            <td>9876543435</td>
-            <td>Bijnor</td>
-            <td>priya@gmail.com</td>
-            <td>94</td>
-        </tr>
-        <tr style="background-color: cornflowerblue;">
-            <td>Smita chauhan</td>
-            <td>9876543435</td>
-            <td>Baliya</td>
-            <td>smita@gmail.com</td>
-            <td>96</td>
-        </tr>
-        <tr style="background-color: blueviolet;">
-            <td>Sakshi 2</td>
-            <td>9876548735</td>
-            <td>Bihar</td>
-            <td>sakshi@gmail.com</td>
-            <td>91</td>
-        </tr>
-        
-        
+    <table border="1" cellpadding="8" cellspacing="1">
+        <caption><b>Student marks table</b></caption>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Roll no.</th>
+                <th>Marks</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Sakshi</td>
+                <td>130</td>
+                <td>99</td>
+            </tr>
+            <tr>
+                <td>Priya</td>
+                <td>131</td>
+                <td>98</td>
+            </tr>
+            <tr>
+                <td>Shailly</td>
+                <td>132</td>
+                <td>98</td>
+            </tr>
+            <tr>
+                <td>Riya</td>
+                <td>133</td>
+                <td>87</td>
+            </tr>
+            <tr>
+                <td>Reshu</td>
+                <td>134</td>
+                <td>90</td>
+            </tr>
+            <tr>
+                <td>Princi</td>
+                <td>135</td>
+                <td>95</td>
+            </tr>
+            <tr>
+                <td>Akansha</td>
+                <td>136</td>
+                <td>93</td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
