--- a/webp.html
+++ b/webp.html
@@ -42,14 +42,31 @@
         .left .left2 p{
             margin-left: 10px;
         }
-        .left2 .readme{
-            color: rgb(104, 99, 99);
-            font-size: 16px;
-            font-weight: 600;
-            padding: 10px 15px;
-            margin-left: 25px;
-
+        .left2 .button1{
+            margin-top: 20px;
+            gap: 30px;
         }
+        .left2 .button1 .btn1{
+            text-align: center;
+            border-radius: 5px;
+            padding: 10px 30px;
+            font-size: 15px;
+            background-color: white;
+            border: 1px solid grey;
+            color: black;
+            margin-left: 10px;
+        }
+        .left2 .button1 .btn2{
+            text-align: center;
+            border-radius: 5px;
+            padding: 10px 30px;
+            font-size: 15px;
+            background-color: white;
+            border: 1px solid rgb(243, 238, 238);
+            color: black;
+            margin-left: 700px;
+        }
+
         .right .right1{
             width: 90%;
             background: white;
@@ -138,7 +155,10 @@
     <h2> BLOG ENTRY</h2>
     <p> Title Discription april 7.2024</p><br>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam est neque harum esse nesciunt ducimus sunt at maxime, blanditiis vel nulla cumque consequuntur sit deserunt dolor? Laudantium, maxime alias aut ipsa fugit sunt, necessitatibus ab porro aspernatur, excepturi asperiores. Exercitationem magnam repellendus expedita ipsa assumenda inventore iusto consequuntur nesciunt, numquam, quia ex in minima, laudantium sapiente omnis pariatur? Explicabo facere repellendus mollitia rerum pariatur natus iusto labore minus tenetur nisi vero corporis, enim minima dolores quia iste quo doloremque earum illo dolorum consequuntur. Eaque voluptates dolorum quae, perferendis est fugiat doloremque impedit voluptatum eos nostrum, reprehenderit dolor at. Maiores, nobis.</p>
-    <button class="readme" >READ ME</button>
+    <div class="button1">
+        <a href="" class="btn1">READ MORE</a>
+        <a href="" class="btn2">Comments</a>
+    </div>
     <br>
      </div>
 
